# tokenomics

./: .env  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.cfg  setup.py  tokenomics.code-workspace
.github/workflows/: ci-cd.yml
app/: main.py
app/services/: model_tuning.py
backend/: .dockerignore  .env  .env.example  .flake8  Dockerfile  Procfile  README.md  airflow-requirements.txt  app.json  conftest.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-airflow.txt  requirements-test.txt  requirements.txt  setup.py  setup.sh
backend/airflow/: README.md  airflow.cfg  airflow.db
backend/airflow_env/: pyvenv.cfg
backend/airflow_venv/: pyvenv.cfg
backend/app/: __init__.py  api_docs.py  config.py  main.py  middleware.py
backend/app/api/endpoints/: prediction.py  simulation.py
backend/app/core/: __init__.py  config.py  decimal_utils.py  logger.py  services.py
backend/app/examples/: comparison_example.json  scenario_example.json
backend/app/middleware/: auth.py
backend/app/models/: base.py  comparison.py  prediction.py  scenario.py  shock_event.py  simulation.py  tokenomics.py
backend/app/routers/: __init__.py  simulation.py
backend/app/routes/: market_data.py  simulation.py
backend/app/services/: market_data_service.py  model_tuning.py  prediction.py  scenario_service.py  simulation.py  simulation_service.py  slack_service.py  token_simulation_service.py
backend/app/visualization/: comparison.py  examples.py  prediction.py  supply.py
backend/dags/: market_data_pipeline.py
backend/scripts/: fetch_market_data.py
backend/services/: market_data.py
backend/tests/: .env.test  README.md  __init__.py  conftest.py  test_comparison.py  test_decimal_utils.py  test_simulation.py  test_simulation_endpoints.py  test_token_simulations.py
backend/typings/: __init__.py  airflow.pyi  pytest.pyi
backend/typings/airflow/: __init__.py  __init__.pyi
backend/typings/airflow/models/: __init__.pyi
backend/typings/airflow/operators/: __init__.py  __init__.pyi  python.pyi
backend/typings/airflow/providers/: __init__.py  __init__.pyi
backend/typings/airflow/providers/http/: __init__.py  __init__.pyi
backend/typings/airflow/providers/http/operators/: __init__.py  __init__.pyi  http.pyi
backend/typings/fastapi/: __init__.pyi  responses.pyi  routing.pyi  testclient.pyi
backend/typings/pandas/: __init__.py  __init__.pyi
backend/typings/pandas/core/: frame.pyi
backend/typings/plotly/express/: __init__.py  __init__.pyi
backend/typings/plotly/graph_objects/: __init__.pyi
backend/typings/pycoingecko/: __init__.pyi
backend/typings/pydantic/: __init__.pyi
backend/typings/pydantic_settings/: __init__.pyi
backend/typings/pymongo/: __init__.pyi
backend/typings/pytest/: __init__.pyi
backend/typings/requests/: __init__.py  __init__.pyi
backend/typings/slack_sdk/: __init__.pyi  errors.pyi
backend/typings/starlette/: __init__.pyi  applications.pyi  responses.pyi  routing.pyi  types.pyi
backend/typings/starlette/middleware/: __init__.pyi  base.pyi  httpsredirect.pyi
backend/typings/streamlit/: __init__.py  __init__.pyi
docs/images/: README.md
frontend/: .editorconfig  Dockerfile  README.md  app.py  index.html  package-lock.json  package.json  postcss.config.js  pyrightconfig.json  requirements.txt  setup.sh  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  test-utils.tsx  types.d.ts
frontend/src/components/: Button.tsx  Card.tsx  Navbar.tsx  PlotlyChart.tsx  PredictionsCompare.tsx  ShockEventsForm.tsx  SimulationForm.tsx
frontend/src/contexts/: SimulationContext.tsx
frontend/src/pages/: CompareScenarios.tsx  Dashboard.tsx  ScenarioSimulation.tsx  SimulationPage.tsx  TokenDetails.tsx
frontend/src/services/: api.ts  (+1 more)
typings/pandas/: __init__.pyi
(+17 files in other folders)
