[options]
package_dir =
    = backend
packages = find:

[options.packages.find]
where = backend

[tool:pytest]
testpaths = backend/tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v -s
pythonpath = backend

[pycodestyle]
max-line-length = 88
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
follow_imports = silent
check_untyped_defs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
disallow_untyped_decorators = False
no_implicit_optional = False
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True 